--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "./node_modules/.bin/webpack-dev-server",
-    "build": "./node_modules/.bin/webpack -p",
+    "start": "./node_modules/.bin/webpack-dev-server --open --config webpack.dev.js",
+    "build": "./node_modules/.bin/webpack -p --config webpack.prod.js",
     "watch": "./node_modules/.bin/webpack --watch"
   },
   "keywords": [],
